--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.test.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.2.14",
     "@types/inversify": "^2.0.33",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^12.0.0",
     "axios": "^0.21.0",
+    "chai": "^4.2.0",
     "inversify": "^4.13.0",
     "mocha": "^5.2.0",
+    "nock": "^13.0.4",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
